Better tooltip placement

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -25,13 +25,12 @@
   content: attr(data-text); /* here's the magic */
   position:absolute;
   
-  /* vertically center */
-  top:-50%;
-  transform:translateX(-100%);
+  /* move to top */
+  bottom:100%;
   
   /* move to right */
   left:100%;
-  margin-left:15px; /* and add a small left margin */
+  margin-left:10px; /* padding on the left */
   
   /* basic styles */
   width:200px;
