--- a/geoContrast.html
+++ b/geoContrast.html
@@ -167,23 +167,23 @@ ul li{
 
 
 
-#gb-names-table {
+.gb-table {
   border-collapse: collapse;
   width: 100%;
 }
 
-#gb-names-table td, #gb-names-table th {
+.gb-table td, .gb-table th {
   max-width: 150px;
   word-wrap: break-word;
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#gb-names-table tr:nth-child(even){background-color: #f2f2f2;}
+.gb-table tr:nth-child(even){background-color: #f2f2f2;}
 
-#gb-names-table tr:hover {background-color: #ddd;}
+.gb-table tr:hover {background-color: #ddd;}
 
-#gb-names-table th {
+.gb-table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -193,23 +193,23 @@ ul li{
 
 
 
-#comparison-names-table {
+.comparison-table {
   border-collapse: collapse;
   width: 100%;
 }
 
-#comparison-names-table td, #comparison-names-table th {
+.comparison-table td, .comparison-table th {
   max-width: 150px;
   word-wrap: break-word;
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#comparison-names-table tr:nth-child(even){background-color: #f2f2f2;}
+.comparison-table tr:nth-child(even){background-color: #f2f2f2;}
 
-#comparison-names-table tr:hover {background-color: #ddd;}
+.comparison-table tr:hover {background-color: #ddd;}
 
-#comparison-names-table th {
+.comparison-table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -661,7 +661,7 @@ ul li{
 							<h3 style="margin-bottom:0; padding-bottom:0">geoBoundary:</h3>
 							<br>
 							<div id="gb-names-table-div" style="margin-top:10px">
-								<table id="gb-names-table" style="margin-left:10px">
+								<table id="gb-names-table" class="gb-table" style="margin-left:10px">
 									<thead>
 										<th style="height:52px">shapeName</th>
 										<th>Action</th>
@@ -676,7 +676,7 @@ ul li{
 							<h3 style="margin-bottom:0; padding-bottom:0">Comparison Boundary:</h3>
 							<br>
 							<div id="comparison-names-table-div" style="margin-top:10px">
-								<table id="comparison-names-table" style="margin-left:10px">
+								<table id="comparison-names-table" class="comparison-table" style="margin-left:10px">
 									<thead>
 										<th>
 											<select id="comparison-names-table-select" style="color:black; font-size:smaller" onchange="comparisonFieldsDropdownChanged()">
@@ -692,9 +692,45 @@ ul li{
 						</div>
 					</div>
 
-					<div id="relations-box" class="row box" style="display:none; width:100%; margin:15px 0px">
-						<div id="relations-box-banner" style="width:100%; text-align:center">
+					<br>
+
+					<div id="boundary-relations" class="row box" style="width:100%; margin:15px 0px">
+						<div id="boundary-relations-banner" style="width:100%; text-align:center">
 							<h2>Boundary Comparisons</h2>
+						</div>
+
+						<div id="left-table-div" style="width:45%">
+							<hr style="border-color:#319FD3; background-color:#319FD3; margin:3px; height:3px">
+							<h3 style="margin-bottom:0; padding-bottom:0">geoBoundary:</h3>
+							<button onclick="updateGbRelatedTable()">
+								Calculate
+							</button>
+							<br>
+							<div style="margin-top:10px">
+								<table id="gb-relations-table" class="gb-table" style="margin-left:10px">
+									<thead>
+										<th style="height:52px">Boundary</th>
+										<th>Related To</th>
+									</thhead>
+									<tbody id="gb-relations-table-tbody">
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<div id="right-table-div" style="width:45%">
+							<hr style="border-color:rgb(255,0,0); background-color:rgb(255,0,0); margin:3px; height:3px">
+							<h3 style="margin-bottom:0; padding-bottom:0">Comparison Boundary:</h3>
+							<br>
+							<div style="margin-top:10px">
+								<table id="comparison-relations-table" class="comparison-table" style="margin-left:10px">
+									<thead>
+										<th style="height:52px">Boundary</th>
+										<th>Related To</th>
+									</thhead>
+									<tbody id="comparison-relations-table-tbody">
+									</tbody>
+								</table>
+							</div>
 						</div>
 					</div>
 
@@ -2138,7 +2174,7 @@ ul li{
 		};
 		</script>
 
-		<script>
+		<script type="text/javascript">
 		//-----------------------------------
 		// this chunk defines boundary comparisons
 
@@ -2281,6 +2317,125 @@ ul li{
 			// next
 			// ...
 		};*/
+
+		function calcSpatialRelations(feat, features) {
+			var geojWriter = new ol.format.GeoJSON();
+			geoj1 = geojWriter.writeFeatureObject(feat);
+			var matches = [];
+			for (feat2 of features) {
+				geoj2 = geojWriter.writeFeatureObject(feat2);
+				simil = similarity(geoj1, geoj2);
+				matches.push([feat2,simil]);
+			};
+			return matches;
+		};
+
+		function sortSpatialRelations(matches, sort_by, thresh) {
+			// sort
+			function sortFunc(a, b) {
+				if (a[1][sort_by] < b[1][sort_by]) {
+					// a is less than b by some ordering criterion
+					return -1;
+				}
+				if (a[1][sort_by] > b[1][sort_by]) {
+					// a is greater than b by the ordering criterion
+					return 1;
+				}
+				// a must be equal to b
+				return 0;
+			};
+			matches.sort(sortFunc);
+
+			// filter by threshold
+			newMatches = [];
+			for (m of matches) {
+				if (m[1][sort_by] >= thresh) {
+					newMatches.push(m);
+				};
+			};
+
+			return newMatches;
+		};
+
+		function findRelatedBoundaries(feat, features) {
+			// calc all relations
+			var allRelations = calcSpatialRelations(feat, features);
+			// find matches
+			var matches = sortSpatialRelations(allRelations, 'within', 0);
+			// keep if at least some relation
+			newMatches = [];
+			for (m of matches) {
+				if ((m[1]['contains'] >= 0.1) | (m[1]['within'] >= 0.1)) {
+					newMatches.push(m);
+				};
+			};
+			var matches = newMatches;
+			// begin logic
+			var relation = '';
+			var final = [];
+			if (matches.length == 0) {
+				return final;
+			};
+			if (matches.length == 1) {
+				relation1 = 'IS';
+			} else {
+				relation1 = 'CONTAINS';
+			};
+			for (x of matches) {
+				var [match,stats] = x;
+				if (matches.length == 1) {
+					if (stats.equality >= 0.95) {
+						var relation2 = 'EQUAL TO';
+						var relation = relation1+' '+relation2;
+						final.push([relation,match]);
+					} else {
+						var relation2 = 'A SUBSET OF';
+						var relation = relation1+' '+relation2;
+						final.push([relation,match]);
+					};
+				} else if (stats.contains >= 0.95) {
+					var relation2 = 'ALL OF';
+					var relation = relation1+' '+relation2;
+					final.push([relation,match]);
+				} else {
+					var relation2 = 'PARTS OF';
+					var relation = relation1+' '+relation2;
+					final.push([relation,match]);
+				};
+			};
+			// finish
+			return final;
+		};
+
+		function updateGbRelatedTable() {
+			features = gbLayer.getSource().getFeatures();
+			comparisonFeatures = comparisonLayer.getSource().getFeatures();
+			// clear old table rows if exists
+			var tbody = document.getElementById('gb-relations-table-tbody');
+			tbody.innerHTML = "";
+			// add rows
+			var comparisonSelect = document.getElementById('comparison-names-table-select');
+			for (feature of features) {
+				var row = document.createElement("tr");
+				// name
+				var cell = document.createElement("td");
+				var name = feature.getProperties()['shapeName'];
+				cell.innerText = name;
+				row.appendChild(cell);
+				// find related boundaries
+				var cell = document.createElement("td");
+				var cellContent = '';
+				related = findRelatedBoundaries(feature, comparisonFeatures);
+				for (x of related) {
+					[relation,match] = x;
+					cellContent += relation + ' ' + match.getProperties()[comparisonSelect.value] + '<br>';
+				};
+				cell.innerHTML = cellContent;
+				row.appendChild(cell);
+				// add row
+				tbody.appendChild(row);
+			};
+		};
 
 		</script>
 
