--- a/geoContrast.html
+++ b/geoContrast.html
@@ -707,31 +707,76 @@ ul li{
 							</button>
 							<br>
 							<div style="margin-top:10px">
-								<table id="gb-relations-table" class="gb-table" style="margin-left:10px">
+								<table id="gb-relations-equals-table" class="gb-table" style="display:none; margin-left:10px">
 									<thead>
 										<th style="height:52px">Boundary</th>
-										<th>Related To</th>
+										<th>Equals</th>
 									</thhead>
-									<tbody id="gb-relations-table-tbody">
+									<tbody id="gb-relations-equals-table-tbody">
+									</tbody>
+								</table>
+							</div>
+							<div style="margin-top:10px">
+								<table id="gb-relations-contains-table" class="gb-table" style="display:none; margin-left:10px">
+									<thead>
+										<th style="height:52px">Boundary</th>
+										<th>Contains</th>
+									</thhead>
+									<tbody id="gb-relations-contains-table-tbody">
+									</tbody>
+								</table>
+							</div>
+							<div style="margin-top:10px">
+								<table id="gb-relations-subset-table" class="gb-table" style="display:none; margin-left:10px">
+									<thead>
+										<th style="height:52px">Boundary</th>
+										<th>Is a subset of</th>
+									</thhead>
+									<tbody id="gb-relations-subset-table-tbody">
 									</tbody>
 								</table>
 							</div>
 						</div>
+
 						<div id="right-table-div" style="width:45%">
 							<hr style="border-color:rgb(255,0,0); background-color:rgb(255,0,0); margin:3px; height:3px">
 							<h3 style="margin-bottom:0; padding-bottom:0">Comparison Boundary:</h3>
+							<button onclick="alert('Coming soon!')">
+								Calculate
+							</button>
 							<br>
 							<div style="margin-top:10px">
-								<table id="comparison-relations-table" class="comparison-table" style="margin-left:10px">
+								<table id="comparison-relations-equals-table" class="gb-table" style="display:none; margin-left:10px">
 									<thead>
 										<th style="height:52px">Boundary</th>
-										<th>Related To</th>
+										<th>Equals</th>
 									</thhead>
-									<tbody id="comparison-relations-table-tbody">
+									<tbody id="comparison-relations-equals-table-tbody">
+									</tbody>
+								</table>
+							</div>
+							<div style="margin-top:10px">
+								<table id="comparison-relations-contains-table" class="gb-table" style="display:none; margin-left:10px">
+									<thead>
+										<th style="height:52px">Boundary</th>
+										<th>Contains</th>
+									</thhead>
+									<tbody id="comparison-relations-contains-table-tbody">
+									</tbody>
+								</table>
+							</div>
+							<div style="margin-top:10px">
+								<table id="comparison-relations-subset-table" class="gb-table" style="display:none; margin-left:10px">
+									<thead>
+										<th style="height:52px">Boundary</th>
+										<th>Is a subset of</th>
+									</thhead>
+									<tbody id="comparison-relations-subset-table-tbody">
 									</tbody>
 								</table>
 							</div>
 						</div>
+
 					</div>
 
 				</section>
@@ -2384,7 +2429,7 @@ ul li{
 			for (x of matches) {
 				var [match,stats] = x;
 				if (matches.length == 1) {
-					if (stats.equality >= 0.95) {
+					if (stats.equality >= 0.90) {
 						var relation2 = 'EQUAL TO';
 						var relation = relation1+' '+relation2;
 						final.push([relation,match]);
@@ -2393,7 +2438,7 @@ ul li{
 						var relation = relation1+' '+relation2;
 						final.push([relation,match]);
 					};
-				} else if (stats.contains >= 0.95) {
+				} else if (stats.contains >= 0.90) {
 					var relation2 = 'ALL OF';
 					var relation = relation1+' '+relation2;
 					final.push([relation,match]);
@@ -2408,33 +2453,125 @@ ul li{
 		};
 
 		function updateGbRelatedTable() {
-			features = gbLayer.getSource().getFeatures();
-			comparisonFeatures = comparisonLayer.getSource().getFeatures();
-			// clear old table rows if exists
-			var tbody = document.getElementById('gb-relations-table-tbody');
-			tbody.innerHTML = "";
-			// add rows
-			var comparisonSelect = document.getElementById('comparison-names-table-select');
+			var features = gbLayer.getSource().getFeatures();
+			var comparisonFeatures = comparisonLayer.getSource().getFeatures();
+			// calc and group all related features
+			var equals = [];
+			var contains = [];
+			var subsets = [];
 			for (feature of features) {
-				var row = document.createElement("tr");
-				// name
-				var cell = document.createElement("td");
-				var name = feature.getProperties()['shapeName'];
-				cell.innerText = name;
-				row.appendChild(cell);
-				// find related boundaries
-				var cell = document.createElement("td");
-				var cellContent = '';
 				related = findRelatedBoundaries(feature, comparisonFeatures);
-				for (x of related) {
-					[relation,match] = x;
-					cellContent += relation + ' ' + match.getProperties()[comparisonSelect.value] + '<br>';
+				if (related[0][0].includes('CONTAINS')) {
+					contains.push([feature,related]);
+				} else if (related[0][0].includes('EQUAL')) {
+					equals.push([feature,related]);
+				} else if (related[0][0].includes('SUBSET')) {
+					subsets.push([feature,related]);
 				};
-				cell.innerHTML = cellContent;
-				row.appendChild(cell);
-				// add row
-				tbody.appendChild(row);
 			};
+			
+			// populate tables
+			var comparisonSelect = document.getElementById('comparison-names-table-select');
+			
+			// populate equals table
+			var table = document.getElementById('gb-relations-equals-table')
+			// clear old table rows if exists
+			var tbody = document.getElementById('gb-relations-equals-table-tbody');
+			tbody.innerHTML = "";
+			// if any equals
+			if (equals.length) {
+				table.style.display = 'table';
+				// add rows
+				for (x of equals) {
+					var [feature,related] = x;
+					var row = document.createElement("tr");
+					// name
+					var cell = document.createElement("td");
+					var name = feature.getProperties()['shapeName'];
+					cell.innerText = name;
+					row.appendChild(cell);
+					// find related boundaries
+					var cell = document.createElement("td");
+					var cellContent = '';
+					for (x of related) {
+						[relation,match] = x;
+						cellContent += relation + ' ' + match.getProperties()[comparisonSelect.value] + '<br>';
+					};
+					cell.innerHTML = cellContent;
+					row.appendChild(cell);
+					// add row
+					tbody.appendChild(row);
+				};
+			} else {
+				table.style.display = 'none';
+			};
+
+			// populate contains table
+			var table = document.getElementById('gb-relations-contains-table')
+			// clear old table rows if exists
+			var tbody = document.getElementById('gb-relations-contains-table-tbody');
+			tbody.innerHTML = "";
+			// if any contains
+			if (contains.length) {
+				table.style.display = 'table';
+				// add rows
+				for (x of contains) {
+					var [feature,related] = x;
+					var row = document.createElement("tr");
+					// name
+					var cell = document.createElement("td");
+					var name = feature.getProperties()['shapeName'];
+					cell.innerText = name;
+					row.appendChild(cell);
+					// find related boundaries
+					var cell = document.createElement("td");
+					var cellContent = '';
+					for (x of related) {
+						[relation,match] = x;
+						cellContent += relation + ' ' + match.getProperties()[comparisonSelect.value] + '<br>';
+					};
+					cell.innerHTML = cellContent;
+					row.appendChild(cell);
+					// add row
+					tbody.appendChild(row);
+				};
+			} else {
+				table.style.display = 'none';
+			};
+
+			// populate subset table
+			var table = document.getElementById('gb-relations-subset-table')
+			// clear old table rows if exists
+			var tbody = document.getElementById('gb-relations-subset-table-tbody');
+			tbody.innerHTML = "";
+			// if any equals
+			if (subsets.length) {
+				table.style.display = 'table';
+				// add rows
+				for (x of subsets) {
+					var [feature,related] = x;
+					var row = document.createElement("tr");
+					// name
+					var cell = document.createElement("td");
+					var name = feature.getProperties()['shapeName'];
+					cell.innerText = name;
+					row.appendChild(cell);
+					// find related boundaries
+					var cell = document.createElement("td");
+					var cellContent = '';
+					for (x of related) {
+						[relation,match] = x;
+						cellContent += relation + ' ' + match.getProperties()[comparisonSelect.value] + '<br>';
+					};
+					cell.innerHTML = cellContent;
+					row.appendChild(cell);
+					// add row
+					tbody.appendChild(row);
+				};
+			} else {
+				table.style.display = 'none';
+			};
+
 		};
 
 		</script>
